<resources>
    <string name="app_name">BQEvernote</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_notes">NotesActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="note_title">Titulo</string>
    <string name="note_content">Contenido</string>
    <string name="titulo">Titulo</string>
    <string name="contenido">Contenido</string>
    <string name="cd_title">Crea tu nueva nota</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
</resources>
